--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <a target="_blank" href="https://github.com/raidkadri">
                     <h5>github.com/raidkadri <img class="in-pic" src="assets/img/github.png" alt="github" /></h5>
                 </a>
-                <a target="_self" href="projects/index.html">
+                <a target="_self" href="projects">
                     <h5>Projects <img class="in-pic" src="assets/img/work.png" alt="github" /></h5>
                 </a>
 
