--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="keywords"
         content="raid kadri, RAID, KADRI, algeria, microclub, raidkadri, kadriraid, usthb , portfolio, nlp, smart assitant, AI, bigdata, algeria, CS50">
     <title>Raid kadri. | Personal Website</title>
-    <link rel="icon" href="assets/img/raid_kadri.jpeg">
+    <link rel="icon" href="assets/img/raid_kadri1.png">
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link href="https://fonts.googleapis.com/css?family=Cairo" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -28,7 +28,7 @@
                 <p id="desc">I am a Master's student in computer science at the University of Sciences and Techniques Houari Boumedien Bab Ezzouar. During my studies, I was able to acquire a solid base in various fields related to computer science (algorithms, databases, object-oriented paradigm, networks) as well as knowledge in mathematics (calculations, linear algebra, statistics and probabilities ). My end-of-studies project with a research team from our university and in collaboration with a laboratory from the University of Michigan at Dearborn was a great opportunity for me to apply what I learned during the course and to to acquire more and more knowledge on advanced subjects. topics in AI, web semantics, web services and machine learning. I am now looking to develop and use my computer skills, especially in machine learning and deep learning applications.</p>
             </div>
             <div class="col-lg-4 col-xs-12 align-center info">
-                <img id="picture" src="assets/img/raid_kadri.jpeg" alt="Raid KADRI" width="300" height="300"/>
+                <img id="picture" src="assets/img/raid_kadri2.png" alt="Raid KADRI" width="300" height="300"/>
             </div>
             <div class="col-lg-4 col-xs-12 align-right info">
                 <h5><a href="mailto:raidk33@gmail.com">raidk33@gmail.com</a> <img
