add "my 2 years as dental student"

--- a/index.html
+++ b/index.html
@@ -89,6 +89,19 @@
                             Networks <span class="pipe"> |</span>
                             Management.</p>
                     </div>
+                     <div class="activity">
+                        <div class="col-lg-6 col-xs-6 align-left column-small info">09/2016 - 06/2018</div>
+                        <div class="col-lg-6 col-xs-6 align-right column-small info" style="opacity: 0">Constantin</div>
+                        <h3 class="title">dental student</h3>
+                        <h4 class="institution">University Constantin III</h4>
+                        <p>Mathematics & Statistics<span class="pipe"> |</span>
+                            Biostatistics<span class="pipe"> |</span>
+                            informatics<span class="pipe"> |</span>
+                            chemistry<span class="pipe"> |</span>
+                            orthodontic<span class="pipe"> |</span>
+                            OC<span class="pipe"> |</span>
+                            Dental Anatomy.</p>
+                    </div>
                     <div class="activity">
                         <h3 class="title">scientific Baccalaureate</h3>
                         <h4 class="institution">Si El-houasse High School, Algiers</h4>
